Refactored to use new Java version constructs (#961)
Signed-off-by: Paolo Patierno <ppatierno@live.com>